<resources>
    <string name="app_name">Go Social</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Dreamit Hub</string>
    <string name="nav_header_subtitle">user@dreamithub.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="d_alert_dialog_okay">Ok</string>
    <string name="signin">Signin</string>
    <string name="signup">Register</string>
    <string name="forgot_your_password">Forgotten your password</string>
    <string name="setting">Settings</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="submit">Submit</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email_address">E-mail Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="date_of_birth">Date of birth (DD/MM/YYYY)</string>
    <string name="gender">Gender</string>
    <string name="about_the_app">ABOUT THE APP</string>
    <!--Setting listing-->
    <string name="about_tap4heat">About GoSocial</string>
    <string name="contact_us">Contact Us</string>
    <string name="refer_a_friend">Profile</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Version</string>
    <string name="search">Search</string>
    <string name="nofication">Nofication</string>
    <string name="account">Account</string>
    <string name="my_saved">My Saved</string>
    <string name="settings_and_privacy">Settings and Privacy</string>
    <string name="help_center">Help Center</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="comming_soon">Comming soon</string>
</resources>