<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/bottom_home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/bottom_search"
            android:icon="@drawable/ic_search_24"
            android:title="@string/search" />
        <item
            android:id="@+id/bottom_notification"
            android:icon="@drawable/ic_notifications_24"
            android:title="@string/nofication" />

        <item
            android:id="@+id/bottom_account"
            android:icon="@drawable/ic_account_circle_24"
            android:title="@string/account" />

    </group>
</menu>