<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_24"
            android:title="Settings" />
        <item
            android:id="@+id/nav_saved_pages"
            android:icon="@drawable/ic_saved_pages24"
            android:title="@string/my_saved" />
        <item
            android:id="@+id/nav_setting_and_privacy"
            android:icon="@drawable/ic_policy_24"
            android:title="@string/settings_and_privacy" />
        <item
            android:id="@+id/nav_help_center"
            android:icon="@drawable/ic_contact_support_24"
            android:title="@string/help_center" />

    </group>
</menu>