<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/txt_about_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/about_the_app"
        android:textSize="@dimen/sp_16" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_about_app"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_16"
        android:background="@drawable/white_setting_round_btn"
        android:orientation="vertical">

        <TextView
            android:id="@+id/btn_about_tap4heat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_8"
            android:drawableRight="@drawable/ic_arrow_right_grey"
            android:gravity="center_vertical"

            android:text="@string/about_tap4heat"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/btn_contact_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_8"
            android:drawableRight="@drawable/ic_arrow_right_grey"
            android:gravity="center_vertical"

            android:text="@string/contact_us"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/btn_refer_a_friend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_8"
            android:drawableRight="@drawable/ic_arrow_right_grey"
            android:gravity="center_vertical"

            android:text="@string/refer_a_friend"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_marginRight="@dimen/dp_8"
                android:gravity="center_vertical"

                android:text="@string/terms_and_conditions"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_marginRight="@dimen/dp_8"
                android:layout_weight="1"
                android:drawableRight="@drawable/ic_arrow_right_grey"
                android:gravity="right|center_vertical"

                android:text="1.0.0"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_8"
            android:drawableRight="@drawable/ic_arrow_right_grey"
            android:gravity="center_vertical"

            android:text="@string/logout"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>