<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/applogo_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_24"
        android:src="@drawable/new_small_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_layout"
        style="@style/google_edittext_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/applogo_signin"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_32"
        android:layout_marginRight="@dimen/dp_16">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_signin_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingLeft="@dimen/dp_20"
            android:textColor="#ff090909" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_layout2"
        style="@style/google_edittext_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_input_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_signin_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/dp_20"
            android:textColor="#ff121212" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_input_layout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_36"
        android:background="@drawable/blue_round_btn"
        android:gravity="center"
        android:text="@string/signin"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_24" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@drawable/blue_round_btn"
        android:gravity="center"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_24" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forgot_password_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_36"
        android:text="Forgotten your password?"
        android:textSize="@dimen/sp_18" />

</RelativeLayout>