<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/google_edittext_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_32"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_signup_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/first_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingLeft="@dimen/dp_20"
                android:textColor="#ff090909" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/google_edittext_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_32"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_signup_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/last_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingLeft="@dimen/dp_20"
                android:textColor="#ff090909" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/google_edittext_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_32"
        android:layout_marginRight="@dimen/dp_16">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_signup_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_address"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/dp_20"
            android:textColor="#ff090909" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/google_edittext_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_input_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:ems="10"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/dp_20"
            android:textColor="#ff121212" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/google_edittext_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_input_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_signup_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/dp_20"
            android:textColor="#ff121212" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/google_edittext_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_input_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_signup_date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:ems="10"
            android:hint="@string/date_of_birth"
            android:imeOptions="actionDone"
            android:inputType="date"
            android:paddingLeft="@dimen/dp_20"
            android:textColor="#ff121212" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:gravity="center">


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Male" />

        <com.polyak.iconswitch.IconSwitch
            android:id="@+id/gender_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:isw_icon_left="@drawable/ic_male"
            app:isw_icon_right="@drawable/ic_female" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Female" />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_input_layout2"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_36"
        android:background="@drawable/blue_round_btn"
        android:gravity="center"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_24" />

</androidx.appcompat.widget.LinearLayoutCompat>