<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_post_user_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/post_user_img"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:src="@drawable/profile_pic" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_8"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/post_user_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:text="this is dummy text with default optrion,this is dummy text with default optrion"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/post_user_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_8"
                android:text="2 hours ago"
                android:textSize="@dimen/sp_16" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/post_img_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_8"
            android:src="@mipmap/ic_ic_more_g" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_post_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_post_user_information"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_8" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_post_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_post_description"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:background="@drawable/story_round">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/post_description_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_post_description"
            android:src="@drawable/new_small_logo" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_post_img_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_post_img"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_8" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_post_counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_post_img_link"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_16">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_like"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_like" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_post_description"
                android:layout_gravity="center"
                android:padding="@dimen/dp_8"
                android:text="@string/like" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_comment" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_post_description"
                android:layout_gravity="center"
                android:padding="@dimen/dp_8"
                android:text="@string/comment" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_post_description"
                android:layout_gravity="center"
                android:padding="@dimen/dp_8"
                android:text="@string/share" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>